--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build & deploy": "react-scripts build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
